--- a/BulkyWebRazor_Temp/appsettings.json
+++ b/BulkyWebRazor_Temp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Bulky_Razor;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
